Replaced a with link

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <meta name="author" content="Bharath_Bhandavya" />
 </head>
 
-<body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
+<body>
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
   <script type="text/javascript" src="js/jquery.1.11.1.js"></script>
